Ejercicio de la biblioteca Version viernes

--- a/week1/day4/exercises/Ejercicio_Biblioteca.ipynb
+++ b/week1/day4/exercises/Ejercicio_Biblioteca.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,11 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "El número total de títulos en la biblioteca es: 13\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Biblioteca municipal *Jose Saramago*\n",
+    "## Inventario de títulos:\n",
+    "\n",
+    "titulos = len(libros)\n",
+    "print (\"El número total de títulos en la biblioteca es:\", titulos)\n",
+    "\n"
    ]
   },
   {
@@ -69,11 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "La palabra Seda contiene 4 letras\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "## Encontrar la palabra seda en la lista\n",
+    "\n",
+    "index = libros.index('Seda')\n",
+    "\n",
+    "## Contar los caracteres y mostrarlos\n",
+    "\n",
+    "\n",
+    "print('La palabra Seda contiene', len(libros[index]) ,'letras')\n",
+    "\n"
    ]
   },
   {
@@ -85,11 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "En la biblioteca tenemos 2 ejemplares del título 'Seda'\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "## Imprimir el segundo valor de la tupla del libro _Seda_\n",
+    "\n",
+    "biblioteca = dict(biblioteca)\n",
+    "print (\"En la biblioteca tenemos\", biblioteca[\"Seda\"], \"ejemplares del título 'Seda'\") \n"
    ]
   },
   {
@@ -106,16 +146,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pendiente = 1984"
+    "\"\"\" pendiente = 1984 \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "El número total de títulos en la biblioteca es: 15\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Por esto dijo mi ex compañero _'Para lo que me queda en el convento'_\n",
+    "libros.append(str(\"1984\"))\n",
+    "\n",
+    "# Compruebo que el numero total de titulos ha aumentado en uno\n",
+    "titulos = len(libros)\n",
+    "print (\"El número total de títulos en la biblioteca es:\", titulos)"
    ]
   },
   {
@@ -304,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
