Ejercicio de la biblioteca actualizado sabado

--- a/week1/day4/exercises/Ejercicio_Biblioteca.ipynb
+++ b/week1/day4/exercises/Ejercicio_Biblioteca.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -129,7 +129,8 @@
     "## Imprimir el segundo valor de la tupla del libro _Seda_\n",
     "\n",
     "biblioteca = dict(biblioteca)\n",
-    "print (\"En la biblioteca tenemos\", biblioteca[\"Seda\"], \"ejemplares del título 'Seda'\") \n"
+    "print (\"En la biblioteca tenemos\", biblioteca[\"Seda\"], \"ejemplares del título 'Seda'\")\n",
+    "biblioteca = list(biblioteca) \n"
    ]
   },
   {
@@ -142,16 +143,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "' pendiente = 1984 '"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "\"\"\" pendiente = 1984 \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -159,7 +169,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "El número total de títulos en la biblioteca es: 15\n"
+     "text": "El número total de títulos en la biblioteca es: 14\n"
     }
    ],
    "source": [
@@ -168,7 +178,7 @@
     "\n",
     "# Compruebo que el numero total de titulos ha aumentado en uno\n",
     "titulos = len(libros)\n",
-    "print (\"El número total de títulos en la biblioteca es:\", titulos)"
+    "print (\"El número total de títulos en la biblioteca es:\", titulos)\n"
    ]
   },
   {
@@ -191,11 +201,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['El mal de Corcira', 'Un mundo feliz', 'Lolita', 'Crimen y castigo', 'Python from for to pro', 'El señor de los anillos', 'Cien años de soledad', 'Harry Potter', 'Lectura Fácil', 'Seda', 'La chica de nieve', 'El día que se perdió la cordura', 'Data Science', ('Los juegos del hambre - Balada de pájaros cantores y serpientes', 10)]\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Añadiendo nuevo libro que hemos comprado en el mercadillo\n",
+    "\n",
+    "libro_1 = \"Los juegos del hambre - Balada de pájaros cantores y serpientes\"\n",
+    "uds_1 = int (10)\n",
+    "nuevo_libro = (libro_1 , uds_1)\n",
+    "tuple (nuevo_libro)\n",
+    "biblioteca.append (nuevo_libro)\n",
+    "print (biblioteca)"
    ]
   },
   {
@@ -208,37 +233,44 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('El mal de Corcira', 4)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "La biblioteca tiene ahora 6 ejemplares de 'El mal de Corcira'\n"
     }
    ],
    "source": [
-    "biblioteca[0]"
+    "# Convertimos en lista la tupla y el segundo valor en int\n",
+    "biblioteca[0] = list(biblioteca[0])\n",
+    "biblioteca[0][1] = int(biblioteca[0][1])\n",
+    "\n",
+    "# Añadimos una unidad al segundo valor de la lista\n",
+    "\n",
+    "biblioteca[0][1] = biblioteca[0][1]+1\n",
+    "\n",
+    "# volvemos a hacer tupla el elemento de la lista\n",
+    "biblioteca[0] = tuple(biblioteca[0])\n",
+    "\n",
+    "# Rematamos la faena con una frase que confirma la operación con style\n",
+    "print(\"La biblioteca tiene ahora\", biblioteca[0][1], \"ejemplares de 'El mal de Corcira'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "4"
-      ]
+      "text/plain": "'l'"
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
    "source": [
@@ -247,18 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
      "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-8a7bcc0d7ddc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbiblioteca\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbiblioteca\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-8a7bcc0d7ddc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
      ]
     }
    ],
@@ -275,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
