Ejercicio de la biblioteca finalizado

--- a/week1/day4/exercises/Ejercicio_Biblioteca.ipynb
+++ b/week1/day4/exercises/Ejercicio_Biblioteca.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -209,7 +209,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['El mal de Corcira', 'Un mundo feliz', 'Lolita', 'Crimen y castigo', 'Python from for to pro', 'El señor de los anillos', 'Cien años de soledad', 'Harry Potter', 'Lectura Fácil', 'Seda', 'La chica de nieve', 'El día que se perdió la cordura', 'Data Science', ('Los juegos del hambre - Balada de pájaros cantores y serpientes', 10)]\n"
+     "text": "[('El mal de Corcira', 4), ('Un mundo feliz', 2), ('Lolita', 5), ('Crimen y castigo', 2), ('Python from for to pro', 0), ('El señor de los anillos', 6), ('Cien años de soledad', 5), ('Harry Potter', 9), ('Lectura Fácil', 4), ('Seda', 2), ('La chica de nieve', 6), ('El día que se perdió la cordura', 3), ('Data Science', 0), ('Los juegos del hambre - Balada de pájaros cantores y serpientes', 10)]\n"
     }
    ],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -240,17 +240,19 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "La biblioteca tiene ahora 6 ejemplares de 'El mal de Corcira'\n"
+     "text": "La biblioteca tiene ahora 4 ejemplares de 'El mal de Corcira'\n"
     }
    ],
    "source": [
-    "# Convertimos en lista la tupla y el segundo valor en int\n",
+    "# Transformar en lista la tupla para poder modificarla\n",
     "biblioteca[0] = list(biblioteca[0])\n",
-    "biblioteca[0][1] = int(biblioteca[0][1])\n",
+    "\n",
+    "# Creamos una nueva variable que sea integer con el segundo valor de la tupla\n",
+    "amount = biblioteca[0][1]\n",
+    "amount = int(amount)\n",
     "\n",
     "# Añadimos una unidad al segundo valor de la lista\n",
-    "\n",
-    "biblioteca[0][1] = biblioteca[0][1]+1\n",
+    "amount = amount + 1\n",
     "\n",
     "# volvemos a hacer tupla el elemento de la lista\n",
     "biblioteca[0] = tuple(biblioteca[0])\n",
@@ -261,36 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'l'"
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "biblioteca[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
      "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
+     "evalue": "'tuple' object does not support item assignment",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-8a7bcc0d7ddc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
+      "\u001b[1;32m<ipython-input-75-8a7bcc0d7ddc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbiblioteca\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
@@ -300,18 +284,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "Busca en google este error y explica porqué no se puede añadir una unidad más. ¿Se te ocurre cómo podrías alterar este dato?"
+    "Busca en google este error y explica porqué no se puede añadir una unidad más. ¿Se te ocurre cómo podrías alterar este dato"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your comment here"
+    "# *_Es lo que acabo de hacer en la celda 22._*\n",
+    "# _NOTA_ *Preguntar por la numeración de las celdas y el orden de ejecución de las mismas.*\n",
+    "## No se puede operar con dos elementos si uno es string y el otro es int\n",
+    "## Los dos elementos de la tupla son string al principio y necesitamos operar con numeros.\n",
+    "## Mi solución ha sido transformar en int el elemento necesario y operar después ignorando el primer elemento. Después he vuelto a transformar en tupla para fijar los cambios. "
    ]
   },
   {
@@ -323,11 +313,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[('El mal de Corcira', 4), ('Un mundo feliz', 2), ('Lolita', 5), ('Crimen y castigo', 2), ('Python from for to pro', 0), ('El señor de los anillos', 6), ('Cien años de soledad', 5), ('Harry Potter', 9), ('Lectura Fácil', 4), ('Seda', 2), ('La chica de nieve', 6), ('El día que se perdió la cordura', 3), ('Data Science', 0), ('Los juegos del hambre - Balada de pájaros cantores y serpientes', 10)]\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "# Convertir en list la tupla\n",
+    "biblioteca[0] = list(biblioteca[0])\n",
+    "\n",
+    "# Asignar la variable tup_to_list\n",
+    "tup_to_list = biblioteca[0][1]\n",
+    "\n",
+    "# Convertir en int el segundo valor de la lista tup_to_list\n",
+    "tup_to_list = int(tup_to_list)\n",
+    "\n",
+    "# Añadir una unidad \n",
+    "tup_to_list = tup_to_list + 1\n",
+    "\n",
+    "# Convertir en tupla el elemento\n",
+    "biblioteca[0] = tuple(biblioteca[0])\n",
+    "\n",
+    "#Compruebo el estado de biblioteca\n",
+    "print(biblioteca)"
    ]
   },
   {
@@ -341,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "# no me ha pasado eso de tener tupla duplicada XD"
    ]
   },
   {
@@ -353,6 +367,28 @@
    "metadata": {},
    "source": [
     "7. Te han pedido que localices los títulos de los libros de los que no disponen de unidades. Es decir, su segundo elemento, es igual a 0. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Libros que nos han mangado unos hackers y ahora no tenemos en la biblioteca:\nPython from for to pro\nData Science\n"
+    }
+   ],
+   "source": [
+    "# Creo un loop que recorra la lista buscando valores 0\n",
+    "print(\"Libros que nos han mangado unos hackers y ahora no tenemos en la biblioteca:\")\n",
+    "for missing in biblioteca:\n",
+    "    missing = list(missing)\n",
+    "    if missing[1] == 0:\n",
+    "        print(missing[0])\n"
    ]
   },
   {
@@ -365,11 +401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "# Lo acabo de hacer XD"
    ]
   }
  ],
